--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@babel/preset-react": "^7.0.0",
     "enzyme": "^3.9.0",
     "local-storage": "^1.4.2",
+    "prop-types": "^15.7.2",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
     "react-icons": "^3.5.0",
